@@ -28,7 +28,8 @@
 package org.hisp.dhis.analytics;
 
 import static java.util.Collections.emptyList;
-import static java.util.Collections.singletonList;
+import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
+import static org.hisp.dhis.analytics.OrgUnitField.DEFAULT_ORG_UNIT_FIELD;
 import static org.hisp.dhis.analytics.TimeField.DEFAULT_TIME_FIELDS;
 import static org.hisp.dhis.common.DimensionType.CATEGORY;
 import static org.hisp.dhis.common.DimensionType.CATEGORY_OPTION_GROUP_SET;
@@ -70,6 +71,7 @@ import org.hisp.dhis.category.CategoryOptionGroupSet;
 import org.hisp.dhis.common.BaseDimensionalObject;
 import org.hisp.dhis.common.CombinationGenerator;
 import org.hisp.dhis.common.DataDimensionItemType;
+import org.hisp.dhis.common.DateRange;
 import org.hisp.dhis.common.DhisApiVersion;
 import org.hisp.dhis.common.DimensionItemKeywords;
 import org.hisp.dhis.common.DimensionItemObjectValue;
@@ -84,11 +86,13 @@ import org.hisp.dhis.common.ListMap;
 import org.hisp.dhis.common.MapMap;
 import org.hisp.dhis.common.ReportingRate;
 import org.hisp.dhis.common.ReportingRateMetric;
+import org.hisp.dhis.common.UserOrgUnitType;
 import org.hisp.dhis.commons.collection.CollectionUtils;
 import org.hisp.dhis.commons.collection.ListUtils;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.dataelement.DataElementGroup;
 import org.hisp.dhis.dataelement.DataElementGroupSet;
+import org.hisp.dhis.dataelement.DataElementOperand;
 import org.hisp.dhis.dataset.DataSet;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.organisationunit.OrganisationUnitGroupSet;
@@ -102,13 +106,14 @@ import org.hisp.dhis.program.ProgramStage;
 import org.hisp.dhis.program.ProgramTrackedEntityAttributeDimensionItem;
 import org.hisp.dhis.system.util.MathUtils;
 import org.hisp.dhis.user.User;
+import org.hisp.dhis.util.DateUtils;
 import org.hisp.dhis.util.ObjectUtils;
 import org.springframework.util.Assert;
 
 import com.google.common.base.MoreObjects;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
 
 /**
  * Class representing query parameters for retrieving aggregated data from the
@@ -182,19 +187,23 @@ public class DataQueryParams
 
     public static final String PREFIX_ORG_UNIT_LEVEL = "oulevel";
 
-    public static final String DEFAULT_ORG_UNIT_FIELD = "ou";
+    public static final String DEFAULT_ORG_UNIT_COL = "ou";
+
+    public static final String REGISTRATION_OU_COL = "registrationou";
+
+    public static final String ENROLLMENT_OU_COL = "enrollmentou";
 
     public static final int DX_INDEX = 0;
 
     public static final int NUMERATOR_DENOMINATOR_PROPERTIES_COUNT = 5;
 
-    public static final ImmutableSet<Class<? extends IdentifiableObject>> DYNAMIC_DIM_CLASSES = ImmutableSet.of(
+    public static final Set<Class<? extends BaseDimensionalObject>> DYNAMIC_DIM_CLASSES = Set.of(
         OrganisationUnitGroupSet.class, DataElementGroupSet.class, CategoryOptionGroupSet.class, Category.class );
 
-    private static final ImmutableSet<String> DIMENSION_PERMUTATION_IGNORE_DIMS = ImmutableSet.of(
+    private static final Set<String> DIMENSION_PERMUTATION_IGNORE_DIMS = Set.of(
         DATA_X_DIM_ID, CATEGORYOPTIONCOMBO_DIM_ID );
 
-    public static final ImmutableSet<DimensionType> COMPLETENESS_DIMENSION_TYPES = ImmutableSet.of(
+    public static final Set<DimensionType> COMPLETENESS_DIMENSION_TYPES = Set.of(
         DATA_X, PERIOD, ORGANISATION_UNIT, ORGANISATION_UNIT_GROUP_SET, CATEGORY_OPTION_GROUP_SET, CATEGORY );
 
     /**
@@ -224,7 +233,7 @@ public class DataQueryParams
     protected Map<MeasureFilter, Double> preAggregateMeasureCriteria = new HashMap<>();
 
     /**
-     * Indicates if the meta data part of the query response should be omitted.
+     * Indicates if the metadata part of the query response should be omitted.
      */
     protected boolean skipMeta;
 
@@ -352,9 +361,14 @@ public class DataQueryParams
     protected Date startDate;
 
     /**
-     * The end date fore the period dimension, can be null.
+     * The end date for the period dimension, can be null.
      */
     protected Date endDate;
+
+    /**
+     * The date range for the period dimension, can be empty.
+     */
+    protected List<DateRange> dateRangeList = new ArrayList<>();
 
     /**
      * The order in which the data values has to be sorted, can be null.
@@ -370,7 +384,7 @@ public class DataQueryParams
      * The organisation unit field used as basis for aggregation in the
      * hierarchy.
      */
-    protected String orgUnitField;
+    protected OrgUnitField orgUnitField = DEFAULT_ORG_UNIT_FIELD;
 
     /**
      * The API version used for the request.
@@ -442,7 +456,7 @@ public class DataQueryParams
 
     /**
      * Applies to reporting rates only. Indicates whether only timely reports
-     * should be returned.
+     * should be returned. Used internally for on time reporting rate metrics.
      */
     protected boolean timely;
 
@@ -581,6 +595,7 @@ public class DataQueryParams
         params.approvalLevel = this.approvalLevel;
         params.startDate = this.startDate;
         params.endDate = this.endDate;
+        params.dateRangeList = this.dateRangeList;
         params.order = this.order;
         params.timeField = this.timeField;
         params.orgUnitField = this.orgUnitField;
@@ -660,6 +675,8 @@ public class DataQueryParams
             .add( "approvalLevel", approvalLevel )
             .add( "startDate", startDate )
             .add( "endDate", endDate )
+            .add( "dateRangeList", dateRangeList.stream()
+                .map( DateRange::toString ).collect( Collectors.joining( ":" ) ) )
             .add( "order", order )
             .add( "timeField", timeField )
             .add( "orgUnitField", orgUnitField )
@@ -667,7 +684,7 @@ public class DataQueryParams
             .addIgnoreNull( "apiVersion", apiVersion ).build();
     }
 
-    private String getDimensionalItemKeywords( final DimensionItemKeywords keywords )
+    private String getDimensionalItemKeywords( DimensionItemKeywords keywords )
     {
         if ( keywords != null )
         {
@@ -806,6 +823,15 @@ public class DataQueryParams
     }
 
     /**
+     * Indicates whether organisation unit group sets are present as dimension
+     * or filter.
+     */
+    public boolean hasOrganisationUnitGroupSets()
+    {
+        return !getDimensionsAndFilters( ORGANISATION_UNIT_GROUP_SET ).isEmpty();
+    }
+
+    /**
      * Returns the period type of the first period specified as filter, or null
      * if there is no period filter.
      */
@@ -816,22 +842,6 @@ public class DataQueryParams
         if ( !filterPeriods.isEmpty() )
         {
             return ((Period) filterPeriods.get( 0 )).getPeriodType();
-        }
-
-        return null;
-    }
-
-    /**
-     * Returns the first period specified as filter, or null if there is no
-     * period filter.
-     */
-    public Period getFilterPeriod()
-    {
-        List<DimensionalItemObject> filterPeriods = getFilterPeriods();
-
-        if ( !filterPeriods.isEmpty() )
-        {
-            return (Period) filterPeriods.get( 0 );
         }
 
         return null;
@@ -894,8 +904,7 @@ public class DataQueryParams
     {
         return orgUnitLevels.stream()
             .map( l -> new BaseDimensionalObject( PREFIX_ORG_UNIT_LEVEL + l.getLevel(),
-                DimensionType.ORGANISATION_UNIT_LEVEL, PREFIX_ORG_UNIT_LEVEL + l.getLevel(), l.getName(),
-                Lists.newArrayList() ) )
+                DimensionType.ORGANISATION_UNIT_LEVEL, PREFIX_ORG_UNIT_LEVEL + l.getLevel(), l.getName(), List.of() ) )
             .collect( Collectors.toList() );
     }
 
@@ -936,11 +945,17 @@ public class DataQueryParams
 
     /**
      * Indicates whether this query requires aggregation of data. No aggregation
-     * takes place if aggregation type is none or if data type is text.
+     * takes place if aggregation type is none, first or last, or if data type
+     * is text.
+     * <p>
+     * Note that the check for {@link DataType#TEXT} is for backwards
+     * compatibility only and text type data elements should have an appropriate
+     * aggregation type.
      */
     public boolean isAggregation()
     {
-        return !(isAggregationType( AggregationType.NONE ) || DataType.TEXT == dataType);
+        return !(isAnyAggregationType( AggregationType.NONE, AggregationType.FIRST, AggregationType.LAST ) ||
+            DataType.TEXT == dataType);
     }
 
     /**
@@ -948,7 +963,15 @@ public class DataQueryParams
      */
     public boolean isAggregationType( AggregationType type )
     {
-        return aggregationType != null && aggregationType.isAggregationType( type );
+        return hasAggregationType() && aggregationType.isAggregationType( type );
+    }
+
+    /**
+     * Indicates whether this query has any of the given aggregation types.
+     */
+    public boolean isAnyAggregationType( AggregationType... types )
+    {
+        return hasAggregationType() && Sets.newHashSet( types ).contains( aggregationType.getAggregationType() );
     }
 
     /**
@@ -1152,6 +1175,16 @@ public class DataQueryParams
     }
 
     /**
+     * Returns all dimensions except any period dimension.
+     */
+    public List<DimensionalObject> getNonPeriodDimensions()
+    {
+        List<DimensionalObject> dims = new ArrayList<>( dimensions );
+        dims.remove( new BaseDimensionalObject( DimensionalObject.PERIOD_DIM_ID ) );
+        return List.copyOf( dims );
+    }
+
+    /**
      * Indicates whether all dimensions and filters have value types among the
      * given set of value types.
      */
@@ -1290,8 +1323,8 @@ public class DataQueryParams
      * the number of days in the first period. In these cases, queries should
      * contain periods with the same number of days only. If period is filter,
      * use the sum of days in all periods. If the period is defined by
-     * "startDate" and "endDate" params, these two will be considered (default
-     * option).
+     * "startDate" and "endDate" parameters, these two will be considered
+     * (default option).
      */
     public int getDaysForAvgSumIntAggregation()
     {
@@ -1321,7 +1354,7 @@ public class DataQueryParams
             return totalDays;
         }
 
-        // Default to "startDate" and "endDate" URL params
+        // Default to "startDate" and "endDate" URL parameters
         return getStartEndDatesAsPeriod().getDaysInPeriod();
     }
 
@@ -1432,12 +1465,60 @@ public class DataQueryParams
     }
 
     /**
+     * Indicates whether this query has a nonempty dateRangeList.
+     */
+    public boolean hasDateRangeList()
+    {
+        return isNotEmpty( dateRangeList );
+    }
+
+    /**
+     * Indicates whether this query has a continuous or EMPTY dateRangeList. It
+     * assumes that the dateRangeList is sorted. It should happen in the
+     * EventQueryParam::replacePeriodsWithDates method.
+     */
+    public boolean hasContinuousDateRangeList()
+    {
+        if ( !hasDateRangeList() )
+        {
+            return true;
+        }
+
+        if ( dateRangeList.size() == 1 )
+        {
+            return true;
+        }
+
+        for ( int i = dateRangeList.size() - 1; i > 0; i-- )
+        {
+            boolean diffAboveOneDay = DateUtils.daysBetween( dateRangeList.get( i - 1 ).getEndDate(),
+                dateRangeList.get( i ).getStartDate() ) > 1;
+
+            if ( diffAboveOneDay )
+            {
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+    /**
      * Indicates whether start and end date are specified and the start date is
      * after the end date, which is invalid.
      */
     public boolean startDateAfterEndDate()
     {
         return hasStartEndDate() && startDate.after( endDate );
+    }
+
+    /**
+     * Indicates whether any start date is after the end date, which is invalid.
+     */
+    public boolean startDatesAfterEndDates()
+    {
+        return hasDateRangeList() && dateRangeList.stream()
+            .anyMatch( drl -> drl.getStartDate().after( drl.getEndDate() ) );
     }
 
     /**
@@ -1485,23 +1566,6 @@ public class DataQueryParams
     public String getTimeFieldAsFieldFallback()
     {
         return ObjectUtils.firstNonNull( getTimeFieldAsField(), TimeField.EVENT_DATE.getField() );
-    }
-
-    /**
-     * Indicates whether a (non-default) organisation unit field is specified.
-     */
-    public boolean hasOrgUnitField()
-    {
-        return orgUnitField != null;
-    }
-
-    /**
-     * Returns the organisation unit field if specified; if not returns the
-     * default field which is {@link DataQueryParams#DEFAULT_ORG_UNIT_FIELD}.
-     */
-    public String getOrgUnitFieldFallback()
-    {
-        return hasOrgUnitField() ? orgUnitField : DEFAULT_ORG_UNIT_FIELD;
     }
 
     /**
@@ -1629,6 +1693,42 @@ public class DataQueryParams
             .collect( Collectors.toList() );
     }
 
+    /**
+     * Returns true if an aggregation type is defined, and this is type is a
+     * "last" {@link AggregationType}".
+     */
+    public boolean isLastPeriodAggregationType()
+    {
+        return hasAggregationType() && getAggregationType().isLastPeriodAggregationType();
+    }
+
+    /**
+     * Returns true if an aggregation type is defined, and this is type is
+     * "first" {@link AggregationType}.
+     */
+    public boolean isFirstPeriodAggregationType()
+    {
+        return hasAggregationType() && getAggregationType().isFirstPeriodAggregationType();
+    }
+
+    /**
+     * Returns true if an aggregation type is defined, and this is type is a
+     * "first" or "last" {@link AggregationType}.
+     */
+    public boolean isFirstOrLastPeriodAggregationType()
+    {
+        return hasAggregationType() && getAggregationType().isFirstOrLastPeriodAggregationType();
+    }
+
+    /**
+     * Returns true if an aggregation type is defined, and this is type is a
+     * "first", "last" or "last in period" {@link AggregationType}.
+     */
+    public boolean isFirstOrLastOrLastInPeriodAggregationType()
+    {
+        return hasAggregationType() && getAggregationType().isFirstOrLastOrLastInPeriodAggregationType();
+    }
+
     // -------------------------------------------------------------------------
     // Supportive protected methods
     // -------------------------------------------------------------------------
@@ -1731,7 +1831,7 @@ public class DataQueryParams
     private void setPeriodDimensionWithoutOptions()
     {
         removeDimension( PERIOD_DIM_ID );
-        setDimensionOptions( PERIOD_DIM_ID, DimensionType.PERIOD, PERIOD_DIM_ID, Lists.newArrayList() );
+        setDimensionOptions( PERIOD_DIM_ID, DimensionType.PERIOD, PERIOD_DIM_ID, List.of() );
     }
 
     /**
@@ -1976,10 +2076,10 @@ public class DataQueryParams
             List<String> keys = Lists.newArrayList( key.split( DIMENSION_SEP ) );
             keys.remove( DX_INDEX );
 
-            final Collection<DimensionItemObjectValue> dimensionItemObjectValues = aggregatedDataMap.get( key );
+            Collection<DimensionItemObjectValue> dimensionItemObjectValues = aggregatedDataMap.get( key );
 
             // Generate final permutation key
-            final String permKey = StringUtils.join( keys, DIMENSION_SEP );
+            String permKey = StringUtils.join( keys, DIMENSION_SEP );
 
             for ( DimensionItemObjectValue dimWithValue : dimensionItemObjectValues )
             {
@@ -2068,7 +2168,7 @@ public class DataQueryParams
     @Override
     public int hashCode()
     {
-        final int prime = 31;
+        int prime = 31;
         int result = 1;
         result = prime * result + ((dimensions == null) ? 0 : dimensions.hashCode());
         result = prime * result + ((filters == null) ? 0 : filters.hashCode());
@@ -2279,6 +2379,11 @@ public class DataQueryParams
         return endDate;
     }
 
+    public List<DateRange> getDateRangeList()
+    {
+        return dateRangeList;
+    }
+
     public SortOrder getOrder()
     {
         return order;
@@ -2289,7 +2394,7 @@ public class DataQueryParams
         return timeField;
     }
 
-    public String getOrgUnitField()
+    public OrgUnitField getOrgUnitField()
     {
         return orgUnitField;
     }
@@ -2355,9 +2460,7 @@ public class DataQueryParams
 
     public String getValueColumn()
     {
-        return (valueColumn != null)
-            ? valueColumn
-            : VALUE_COLUMN_NAME;
+        return ObjectUtils.firstNonNull( valueColumn, VALUE_COLUMN_NAME );
     }
 
     public String getPeriodType()
@@ -2429,8 +2532,8 @@ public class DataQueryParams
      */
     public List<DimensionalItemObject> getAllDataDimensionItems()
     {
-        return ImmutableList
-            .copyOf( ListUtils.union( getDimensionOptions( DATA_X_DIM_ID ), getFilterOptions( DATA_X_DIM_ID ) ) );
+        return ImmutableList.copyOf(
+            ListUtils.union( getDimensionOptions( DATA_X_DIM_ID ), getFilterOptions( DATA_X_DIM_ID ) ) );
     }
 
     /**
@@ -2463,7 +2566,7 @@ public class DataQueryParams
     public Set<DimensionalItemObject> getAllDataSets()
     {
         return getAllReportingRates().stream()
-            .map( r -> (ReportingRate) r )
+            .map( ReportingRate.class::cast )
             .map( ReportingRate::getDataSet )
             .collect( Collectors.toSet() );
     }
@@ -2522,7 +2625,7 @@ public class DataQueryParams
     public List<OrganisationUnit> getAllTypedOrganisationUnits()
     {
         return ImmutableList.copyOf( getAllOrganisationUnits().stream()
-            .map( ou -> (OrganisationUnit) ou )
+            .map( OrganisationUnit.class::cast )
             .collect( Collectors.toList() ) );
     }
 
@@ -2562,7 +2665,7 @@ public class DataQueryParams
      */
     public Set<IdentifiableObject> getProgramsInAttributesAndDataElements()
     {
-        final Set<IdentifiableObject> programs = new HashSet<>();
+        Set<IdentifiableObject> programs = new HashSet<>();
 
         getAllProgramAttributes().stream()
             .map( a -> (ProgramTrackedEntityAttributeDimensionItem) a )
@@ -2636,12 +2739,43 @@ public class DataQueryParams
     }
 
     /**
+     * Returns all data elements, data elements of of data element operands and
+     * data elements of program data elements part of the data dimension.
+     */
+    public List<DimensionalItemObject> getDataElementsOperandsProgramDataElements()
+    {
+        final Set<DimensionalItemObject> dataElements = new HashSet<>();
+
+        dataElements.addAll( getDataElements() );
+        dataElements.addAll( getDataElementOperands().stream()
+            .map( DataElementOperand.class::cast )
+            .map( DataElementOperand::getDataElement )
+            .collect( Collectors.toList() ) );
+        dataElements.addAll( getProgramDataElements().stream()
+            .map( ProgramDataElementDimensionItem.class::cast )
+            .map( ProgramDataElementDimensionItem::getDataElement )
+            .collect( Collectors.toList() ) );
+
+        return ImmutableList.copyOf( dataElements );
+    }
+
+    /**
      * Returns all indicators part of the data dimension.
      */
     public List<DimensionalItemObject> getProgramAttributes()
     {
         return ImmutableList.copyOf( AnalyticsUtils.getByDataDimensionItemType( DataDimensionItemType.PROGRAM_ATTRIBUTE,
             getDimensionOptions( DATA_X_DIM_ID ) ) );
+    }
+
+    /**
+     * Returns all expression dimension items part of the data dimension.
+     */
+    public List<DimensionalItemObject> getExpressionDimensionItems()
+    {
+        return ImmutableList
+            .copyOf( AnalyticsUtils.getByDataDimensionItemType( DataDimensionItemType.EXPRESSION_DIMENSION_ITEM,
+                getDimensionOptions( DATA_X_DIM_ID ) ) );
     }
 
     /**
@@ -2660,7 +2794,7 @@ public class DataQueryParams
      */
     public Period getStartEndDatesAsPeriod()
     {
-        final Period period = new Period();
+        Period period = new Period();
         period.setStartDate( getStartDate() );
         period.setEndDate( getEndDate() );
 
@@ -2678,11 +2812,11 @@ public class DataQueryParams
     {
         if ( getStartDate() != null && getEndDate() != null )
         {
-            final Period period = new Period();
+            Period period = new Period();
             period.setStartDate( getStartDate() );
             period.setEndDate( getEndDate() );
 
-            return singletonList( period );
+            return List.of( period );
         }
 
         return emptyList();
@@ -2761,6 +2895,16 @@ public class DataQueryParams
     {
         return ImmutableList.copyOf( AnalyticsUtils.getByDataDimensionItemType( DataDimensionItemType.PROGRAM_ATTRIBUTE,
             getFilterOptions( DATA_X_DIM_ID ) ) );
+    }
+
+    /**
+     * Returns all expression dimension items part of the data filter.
+     */
+    public List<DimensionalItemObject> getFilterExpressionDimensionItems()
+    {
+        return ImmutableList
+            .copyOf( AnalyticsUtils.getByDataDimensionItemType( DataDimensionItemType.EXPRESSION_DIMENSION_ITEM,
+                getFilterOptions( DATA_X_DIM_ID ) ) );
     }
 
     /**
@@ -3327,7 +3471,7 @@ public class DataQueryParams
             return this;
         }
 
-        public Builder withOrgUnitField( String orgUnitField )
+        public Builder withOrgUnitField( OrgUnitField orgUnitField )
         {
             this.params.orgUnitField = orgUnitField;
             return this;
