@@ -42,7 +42,7 @@ import static org.hisp.dhis.analytics.util.AnalyticsSqlUtils.quote;
 import static org.hisp.dhis.common.DimensionalObject.OPTION_SEP;
 import static org.hisp.dhis.common.QueryOperator.EQ;
 import static org.hisp.dhis.common.QueryOperator.IN;
-import static org.hisp.dhis.common.QueryOperator.NE;
+import static org.hisp.dhis.common.QueryOperator.NEQ;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -50,6 +50,7 @@ import static org.mockito.Mockito.when;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 import java.util.function.Consumer;
 
 import org.hisp.dhis.analytics.TimeField;
@@ -85,8 +86,6 @@ import org.mockito.quality.Strictness;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.support.rowset.SqlRowSet;
 
-import com.google.common.collect.ImmutableList;
-
 /**
  * @author Luciano Fiandesio
  */
@@ -95,7 +94,6 @@ import com.google.common.collect.ImmutableList;
 class EnrollmentAnalyticsManagerTest extends
     EventAnalyticsTest
 {
-
     private JdbcEnrollmentAnalyticsManager subject;
 
     @Mock
@@ -122,7 +120,8 @@ class EnrollmentAnalyticsManagerTest extends
     @BeforeEach
     public void setUp()
     {
-        when( jdbcTemplate.queryForRowSet( anyString() ) ).thenReturn( this.rowSet );
+        when( jdbcTemplate.queryForRowSet( anyString() ) )
+            .thenReturn( this.rowSet );
 
         StatementBuilder statementBuilder = new PostgreSQLStatementBuilder();
         DefaultProgramIndicatorSubqueryBuilder programIndicatorSubqueryBuilder = new DefaultProgramIndicatorSubqueryBuilder(
@@ -137,14 +136,16 @@ class EnrollmentAnalyticsManagerTest extends
     void verifyWithProgramAndStartEndDate()
     {
         EventQueryParams params = new EventQueryParams.Builder( createRequestParams() )
-            .withStartDate( getDate( 2017, 1, 1 ) ).withEndDate( getDate( 2017, 12, 31 ) ).build();
+            .withStartDate( getDate( 2017, 1, 1 ) )
+            .withEndDate( getDate( 2017, 12, 31 ) )
+            .build();
 
         subject.getEnrollments( params, new ListGrid(), 10000 );
 
         verify( jdbcTemplate ).queryForRowSet( sql.capture() );
 
         String expected = "ax.\"monthly\",ax.\"ou\"  from " + getTable( programA.getUid() )
-            + " as ax where enrollmentdate >= '2017-01-01' and enrollmentdate < '2018-01-01' and (uidlevel1 = 'ouabcdefghA' ) limit 10001";
+            + " as ax where enrollmentdate >= '2017-01-01' and enrollmentdate < '2018-01-01' and (ax.\"uidlevel1\" = 'ouabcdefghA' ) limit 10001";
 
         assertSql( sql.getValue(), expected );
 
@@ -154,7 +155,8 @@ class EnrollmentAnalyticsManagerTest extends
     void verifyWithLastUpdatedTimeField()
     {
         EventQueryParams params = new EventQueryParams.Builder( createRequestParams() )
-            .withStartDate( getDate( 2017, 1, 1 ) ).withEndDate( getDate( 2017, 12, 31 ) )
+            .withStartDate( getDate( 2017, 1, 1 ) )
+            .withEndDate( getDate( 2017, 12, 31 ) )
             .withTimeField( TimeField.LAST_UPDATED.name() )
             .build();
 
@@ -163,7 +165,7 @@ class EnrollmentAnalyticsManagerTest extends
         verify( jdbcTemplate ).queryForRowSet( sql.capture() );
 
         String expected = "ax.\"monthly\",ax.\"ou\"  from " + getTable( programA.getUid() )
-            + " as ax where lastupdated >= '2017-01-01' and lastupdated < '2018-01-01' and (uidlevel1 = 'ouabcdefghA' ) limit 10001";
+            + " as ax where lastupdated >= '2017-01-01' and lastupdated < '2018-01-01' and (ax.\"uidlevel1\" = 'ouabcdefghA' ) limit 10001";
 
         assertSql( sql.getValue(), expected );
 
@@ -183,7 +185,6 @@ class EnrollmentAnalyticsManagerTest extends
 
     private void verifyWithProgramStageAndNumericDataElement( ValueType valueType )
     {
-
         EventQueryParams params = createRequestParams( this.programStage, valueType );
 
         subject.getEnrollments( params, new ListGrid(), 100 );
@@ -199,7 +200,7 @@ class EnrollmentAnalyticsManagerTest extends
             subSelect = "coalesce(" + subSelect + ", double precision 'NaN') as \"fWIAEtYVEGk\"";
         }
         String expected = "ax.\"monthly\",ax.\"ou\"," + subSelect + "  from " + getTable( programA.getUid() )
-            + " as ax where ax.\"monthly\" in ('2000Q1') and (uidlevel1 = 'ouabcdefghA' ) " + "and ps = '"
+            + " as ax where ax.\"monthly\" in ('2000Q1') and (ax.\"uidlevel1\" = 'ouabcdefghA' ) " + "and ps = '"
             + programStage.getUid() + "' limit 101";
 
         assertSql( sql.getValue(), expected );
@@ -208,7 +209,6 @@ class EnrollmentAnalyticsManagerTest extends
     @Test
     void verifyWithProgramStageAndTextualDataElementAndFilter()
     {
-
         EventQueryParams params = createRequestParamsWithFilter( programStage, ValueType.TEXT );
 
         subject.getEnrollments( params, new ListGrid(), 10000 );
@@ -221,7 +221,7 @@ class EnrollmentAnalyticsManagerTest extends
             + programStage.getUid() + "' order by executiondate desc limit 1 )";
 
         String expected = "ax.\"monthly\",ax.\"ou\"," + subSelect + "  from " + getTable( programA.getUid() )
-            + " as ax where ax.\"monthly\" in ('2000Q1') and (uidlevel1 = 'ouabcdefghA' ) "
+            + " as ax where ax.\"monthly\" in ('2000Q1') and (ax.\"uidlevel1\" = 'ouabcdefghA' ) "
             + "and ps = '" + programStage.getUid() + "' and " + subSelect + " > '10' limit 10001";
 
         assertSql( sql.getValue(), expected );
@@ -239,7 +239,7 @@ class EnrollmentAnalyticsManagerTest extends
         verify( jdbcTemplate ).queryForRowSet( sql.capture() );
 
         String expected = "ax.\"monthly\",ax.\"ou\"  from " + getTable( programA.getUid() )
-            + " as ax where ax.\"monthly\" in ('2000Q1') and (uidlevel1 = 'ouabcdefghA' )"
+            + " as ax where ax.\"monthly\" in ('2000Q1') and (ax.\"uidlevel1\" = 'ouabcdefghA' )"
             + " and enrollmentstatus in ('ACTIVE','COMPLETED') limit 10001";
 
         assertSql( sql.getValue(), expected );
@@ -263,7 +263,7 @@ class EnrollmentAnalyticsManagerTest extends
         String expected = "ax.\"monthly\",ax.\"ou\"," + "coalesce(" + subSelect
             + ", double precision 'NaN') as \"fWIAEtYVEGk\"" + "  from "
             + getTable( programA.getUid() )
-            + " as ax where ax.\"monthly\" in ('2000Q1') and (uidlevel1 = 'ouabcdefghA' ) "
+            + " as ax where ax.\"monthly\" in ('2000Q1') and (ax.\"uidlevel1\" = 'ouabcdefghA' ) "
             + "and ps = '" + programStage.getUid() + "' and " + subSelect + " > '10' limit 10001";
 
         assertSql( sql.getValue(), expected );
@@ -284,7 +284,7 @@ class EnrollmentAnalyticsManagerTest extends
     }
 
     @Test
-    void verifyGetEnrollmentsWithMissingValueNeFilter()
+    void verifyGetEnrollmentsWithMissingValueNeqFilter()
     {
         String subSelect = "(select \"fWIAEtYVEGk\" from analytics_event_" + programA.getUid()
             + " where analytics_event_"
@@ -292,7 +292,7 @@ class EnrollmentAnalyticsManagerTest extends
             + programStage.getUid() + "' order by executiondate desc limit 1 )";
 
         String expected = subSelect + " is not null";
-        testIt( NE, NV, Collections.singleton(
+        testIt( NEQ, NV, Collections.singleton(
             ( capturedSql ) -> assertThat( capturedSql, containsString( expected ) ) ) );
     }
 
@@ -337,10 +337,9 @@ class EnrollmentAnalyticsManagerTest extends
 
         String expected = subSelect + " is null";
         String unexpected = "(" + subSelect + " in (";
-        testIt( IN, NV,
-            ImmutableList.of(
-                ( capturedSql ) -> assertThat( capturedSql, containsString( expected ) ),
-                ( capturedSql ) -> assertThat( capturedSql, not( containsString( unexpected ) ) ) ) );
+        testIt( IN, NV, List.of(
+            ( capturedSql ) -> assertThat( capturedSql, containsString( expected ) ),
+            ( capturedSql ) -> assertThat( capturedSql, not( containsString( unexpected ) ) ) ) );
     }
 
     private void testIt( QueryOperator operator, String filter, Collection<Consumer<String>> assertions )
@@ -368,7 +367,8 @@ class EnrollmentAnalyticsManagerTest extends
         RelationshipType relationshipTypeA = createRelationshipType();
 
         EventQueryParams.Builder params = new EventQueryParams.Builder(
-            createRequestParams( programIndicatorA, relationshipTypeA ) ).withStartDate( startDate )
+            createRequestParams( programIndicatorA, relationshipTypeA ) )
+                .withStartDate( startDate )
                 .withEndDate( endDate );
 
         when( programIndicatorService.getAnalyticsSql( "", NUMERIC, programIndicatorA, getDate( 2000, 1, 1 ),
@@ -390,7 +390,7 @@ class EnrollmentAnalyticsManagerTest extends
             + " AND tei.uid = ax.tei )), double precision 'NaN') as \""
             + programIndicatorA.getUid()
             + "\"  " + "from analytics_enrollment_" + programA.getUid()
-            + " as ax where enrollmentdate >= '2015-01-01' and enrollmentdate < '2017-04-09' and (uidlevel1 = 'ouabcdefghA' ) limit 101";
+            + " as ax where enrollmentdate >= '2015-01-01' and enrollmentdate < '2017-04-09' and (ax.\"uidlevel1\" = 'ouabcdefghA' ) limit 101";
 
         assertSql( sql.getValue(), expected );
     }
@@ -409,7 +409,8 @@ class EnrollmentAnalyticsManagerTest extends
             RelationshipEntity.PROGRAM_INSTANCE );
 
         EventQueryParams.Builder params = new EventQueryParams.Builder(
-            createRequestParams( programIndicatorA, relationshipTypeA ) ).withStartDate( startDate )
+            createRequestParams( programIndicatorA, relationshipTypeA ) )
+                .withStartDate( startDate )
                 .withEndDate( endDate );
 
         when( programIndicatorService.getAnalyticsSql( "", NUMERIC, programIndicatorA, getDate( 2000, 1, 1 ),
@@ -431,7 +432,7 @@ class EnrollmentAnalyticsManagerTest extends
             "= " + relationshipTypeA.getId() + " AND pi.uid = ax.pi )), double precision 'NaN')" + " as \""
             + programIndicatorA.getUid() + "\"  "
             + "from analytics_enrollment_" + programA.getUid()
-            + " as ax where enrollmentdate >= '2015-01-01' and enrollmentdate < '2017-04-09' and (uidlevel1 = 'ouabcdefghA' ) limit 101";
+            + " as ax where enrollmentdate >= '2015-01-01' and enrollmentdate < '2017-04-09' and (ax.\"uidlevel1\" = 'ouabcdefghA' ) limit 101";
 
         assertSql( sql.getValue(), expected );
     }
@@ -480,7 +481,8 @@ class EnrollmentAnalyticsManagerTest extends
         RelationshipType relationshipTypeA = createRelationshipType();
 
         EventQueryParams.Builder params = new EventQueryParams.Builder(
-            createRequestParams( programIndicatorA, relationshipTypeA ) ).withStartDate( startDate )
+            createRequestParams( programIndicatorA, relationshipTypeA ) )
+                .withStartDate( startDate )
                 .withEndDate( endDate );
 
         when( programIndicatorService.getAnalyticsSql( "", NUMERIC, programIndicatorA, getDate( 2000, 1, 1 ),
@@ -502,7 +504,7 @@ class EnrollmentAnalyticsManagerTest extends
             + " AND tei.uid = ax.tei )), double precision 'NaN') as \""
             + programIndicatorA.getUid()
             + "\"  " + "from analytics_enrollment_" + programA.getUid()
-            + " as ax where enrollmentdate >= '2015-01-01' and enrollmentdate < '2017-04-09' and (uidlevel1 = 'ouabcdefghA' ) limit 101";
+            + " as ax where enrollmentdate >= '2015-01-01' and enrollmentdate < '2017-04-09' and (ax.\"uidlevel1\" = 'ouabcdefghA' ) limit 101";
 
         assertSql( sql.getValue(), expected );
     }
